--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -9,6 +11,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+       <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyB7ETOwK6NMmiPXlHUAThIjfDbCxXq_A6c"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
