--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
       android:theme="@style/AppTheme">
        <meta-data
      android:name="com.google.android.geo.API_KEY"
-     android:value="PASTE YOUR OWN API KEY"/>
+     android:value="AIzaSyB7ETOwK6NMmiPXlHUAThIjfDbCxXq_A6c"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
